@@ -16,8 +16,6 @@
  */
 package org.apache.calcite.util;
 
-import org.apache.commons.io.input.ReaderInputStream;
-
 import com.google.common.io.CharSource;
 
 import org.checkerframework.checker.nullness.qual.Nullable;
@@ -35,8 +33,10 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.Locale;
-import java.util.Objects;
+import java.util.Optional;
 import java.util.zip.GZIPInputStream;
+
+import static java.util.Objects.requireNonNull;
 
 /**
  * Utilities for {@link Source}.
@@ -83,7 +83,7 @@ public abstract class Sources {
 
   public static Source url(String url) {
     try {
-      return of(new URL(url));
+      return of(URI.create(url).toURL());
     } catch (MalformedURLException | IllegalArgumentException e) {
       throw new RuntimeException("Malformed URL: '" + url + "'", e);
     }
@@ -107,7 +107,7 @@ public abstract class Sources {
     private final CharSource charSource;
 
     private GuavaCharSource(CharSource charSource) {
-      this.charSource = Objects.requireNonNull(charSource, "charSource");
+      this.charSource = requireNonNull(charSource, "charSource");
     }
 
     private UnsupportedOperationException unsupported() {
@@ -123,6 +123,10 @@ public abstract class Sources {
       throw unsupported();
     }
 
+    @Override public Optional<File> fileOpt() {
+      return Optional.empty();
+    }
+
     @Override public String path() {
       throw unsupported();
     }
@@ -132,8 +136,7 @@ public abstract class Sources {
     }
 
     @Override public InputStream openStream() throws IOException {
-      // use charSource.asByteSource() once calcite can use guava v21+
-      return new ReaderInputStream(reader(), StandardCharsets.UTF_8);
+      return charSource.asByteSource(StandardCharsets.UTF_8).openStream();
     }
 
     @Override public String protocol() {
@@ -173,19 +176,19 @@ public abstract class Sources {
     private final boolean urlGenerated;
 
     private FileSource(URL url) {
-      this.url = Objects.requireNonNull(url, "url");
+      this.url = requireNonNull(url, "url");
       this.file = urlToFile(url);
       this.urlGenerated = false;
     }
 
     private FileSource(File file) {
-      this.file = Objects.requireNonNull(file, "file");
+      this.file = requireNonNull(file, "file");
       this.url = fileToUrl(file);
       this.urlGenerated = true;
     }
 
     private File fileNonNull() {
-      return Objects.requireNonNull(file, "file");
+      return requireNonNull(file, "file");
     }
 
     private static @Nullable File urlToFile(URL url) {
@@ -220,7 +223,7 @@ public abstract class Sources {
           // That is why java.net.URLEncoder.encode(java.lang.String, java.lang.String) is not
           // suitable because it replaces " " with "+".
           String encodedPath = new URI(null, null, filePath, null).getRawPath();
-          return new URL("file", null, 0, encodedPath);
+          return URI.create("file:" + encodedPath).toURL();
         } catch (MalformedURLException | URISyntaxException e) {
           throw new IllegalArgumentException("Unable to create URL for file " + filePath, e);
         }
@@ -251,6 +254,10 @@ public abstract class Sources {
         throw new UnsupportedOperationException();
       }
       return file;
+    }
+
+    @Override public Optional<File> fileOpt() {
+      return Optional.ofNullable(file);
     }
 
     @Override public String protocol() {
